modified: Makefile.d/clean.makecmdgoals

--- a/sdk_sample/framewrk/Makefile
+++ b/sdk_sample/framewrk/Makefile
@@ -21,7 +21,7 @@ export
 
 .PHONY: clean
 clean:
-	$(MAKE) -f '$(ROOT)/Makefile.d/clean.makecmdgoals'
+	$(MAKE) -f '$(ROOT)/Makefile.d/clean.makecmdgoals' $@
 
 
 framewrk:
