--- a/sdk_sample/generic/Makefile
+++ b/sdk_sample/generic/Makefile
@@ -28,7 +28,7 @@ export
 
 .PHONY: clean
 clean:
-	$(MAKE) -f '$(ROOT)/Makefile.d/clean.makecmdgoals'
+	$(MAKE) -f '$(ROOT)/Makefile.d/clean.makecmdgoals' $@
 
 
 windres:
